--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body style="background-image: url(https://iphonesoft.fr/images/_082019/fond-ecran-dynamique-macos-wallpaper-club.jpg)"></body>
 <h1> hello world from ARTIS'TES Béthune </h1>
-<h2> hi everyone </h2>
-<p1> j'aime les knackis </p1>
+<h2> 🙋🏻‍♂️hi everyone 😄 </h2>
+<img src="https://media.tenor.com/images/a03e50aa358b7cab991f58b43e1a942a/tenor.gif"img>
